--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ numpy==1.23.5
 opencv_contrib_python==4.9.0.80
 opencv_python==4.9.0.80
 opencv_python_headless==4.9.0.80
+onnx== 1.15.0
+onnxruntime== 1.17.1
 Pillow==10.2.0
 scipy==1.12.0
 six==1.16.0
 tensorflow==2.16.1
-tensorflow_intel==2.16.1
+gunicorn==21.2.0
